--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "homepage": "https://github.com/CloverJoy/typeAndJoy#readme",
   "dependencies": {
+    "@chakra-ui/react": "^1.3.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "framer-motion": "^3.3.0",
     "mongoose": "^5.11.16",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
