--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "framer-motion": "^3.3.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.16",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
