--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/index.js",
+    "startdeploy": "node database/seed.js && webpack && node server/index.js",
     "build": "webpack",
     "react-dev": "webpack -w",
     "seed": "node database/seed.js"
@@ -26,6 +27,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "framer-motion": "^3.3.0",
     "moment": "^2.29.1",
