--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@emotion/styled": "^11.1.5",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "framer-motion": "^3.3.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.11.16",
     "nodemon": "^2.0.7",
